objects/EUR_CRM_Visit__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Time_Spent__c</fullName>
        <formula>IF(
  (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c) &gt; 0 ,
  if(FLOOR( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)) &gt; 0, TEXT( FLOOR( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)) ) &amp; &quot; days &quot;,&quot;&quot;)
  &amp; if(FLOOR( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24, 24 ) ) &gt; 0, TEXT( FLOOR( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24, 24 ) ) ) &amp; &quot; hours &quot;,&quot;&quot;)
  &amp; TEXT( ROUND( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Assistant_Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up for a  Sales rep who is in effect a User</description>
        <label>Assistant Visitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-client Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit (EU)</relationshipLabel>
        <relationshipName>Visit_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Datetime__c</fullName>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Event_Record_Id__c</fullName>
        <label>Event Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Included_in_KPI_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in KPI Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Datetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Goods Due</fullName>
                </value>
                <value>
                    <fullName>Merchandise Material Due</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rebuild Outlet</fullName>
                </value>
                <value>
                    <fullName>Special Salesforce</fullName>
                </value>
                <value>
                    <fullName>Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Yearly Negotiation</fullName>
                </value>
                <value>
                    <fullName>Phone/Video Conferencing Visits</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Placed an order</fullName>
                </value>
                <value>
                    <fullName>Examination</fullName>
                </value>
                <value>
                    <fullName>No licence</fullName>
                </value>
                <value>
                    <fullName>Marketing activity confirmation</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary__c</fullName>
        <label>Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Data_Capture_EndDateTime__c</fullName>
        <label>Visit Data Capture End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Data_Capture_StartDateTime__c</fullName>
        <label>Visit Data Capture Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>telephone contact</fullName>
                </value>
                <value>
                    <fullName>off frequency</fullName>
                </value>
                <value>
                    <fullName>promo action (ON)</fullName>
                </value>
                <value>
                    <fullName>outside the database</fullName>
                </value>
                <value>
                    <fullName>competition (ON)</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>service center</fullName>
                </value>
                <value>
                    <fullName>POSM/WS goods issue</fullName>
                </value>
                <value>
                    <fullName>RSM meeting</fullName>
                </value>
                <value>
                    <fullName>new customer</fullName>
                </value>
                <value>
                    <fullName>administration</fullName>
                </value>
                <value>
                    <fullName>substitute for colleague</fullName>
                </value>
                <value>
                    <fullName>JB meeting</fullName>
                </value>
                <value>
                    <fullName>doctor appointment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Free goods due</fullName>
                </value>
                <value>
                    <fullName>Merchandise material due</fullName>
                </value>
                <value>
                    <fullName>Yearly negotiation</fullName>
                </value>
                <value>
                    <fullName>Special salesforce</fullName>
                </value>
                <value>
                    <fullName>Rebuild Outlet</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Telesales account</fullName>
                </value>
                <value>
                    <fullName>New account</fullName>
                </value>
                <value>
                    <fullName>Stock Delivery</fullName>
                </value>
                <value>
                    <fullName>POS Delivery</fullName>
                </value>
                <value>
                    <fullName>Store Merchandising</fullName>
                </value>
                <value>
                    <fullName>Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>Event Activation</fullName>
                </value>
                <value>
                    <fullName>Promo Activation</fullName>
                </value>
                <value>
                    <fullName>Phone/Video Conferencing Visits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visit (EU)</label>
    <listViews>
        <fullName>All_AO_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_EndDateTime__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_StartDateTime__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.AO_Off_Trade_Visit,EUR_CRM_Visit__c.AO_On_Trade_Visit</value>
        </filters>
        <label>All AO Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_EndDateTime__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_StartDateTime__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_AT_Visit</value>
        </filters>
        <label>EUR AT Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_All_Visits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_AT_Visit</value>
        </filters>
        <label>EUR AT All Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_BE_Off_Trade_Visit,EUR_CRM_Visit__c.EUR_BE_On_Trade_Visit,EUR_CRM_Visit__c.EUR_BE_Wholesaler_Visit</value>
        </filters>
        <label>EUR BE Visits</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_DK_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_DK_ON_Trade_Visit,EUR_CRM_Visit__c.EUR_DK_OFF_Trade_Visit</value>
        </filters>
        <label>All DK Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_FI_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_FI_On_Trade_Visit,EUR_CRM_Visit__c.EUR_FI_OFF_Trade_Visit</value>
        </filters>
        <label>All FI Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_ZA_Visit</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Actual_Time_Spent__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.ZA_Off_Trade_Visit,EUR_CRM_Visit__c.ZA_On_Trade_Visit</value>
        </filters>
        <label>All ZA Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Visit_View</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_BG_Off_Trade_Visit,EUR_CRM_Visit__c.EUR_BG_On_Trade_Visit</value>
        </filters>
        <label>EUR BG All Visit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_Off_Trade_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_DE_Off_Trade_Visit</value>
        </filters>
        <label>EUR DE All Off-Trade Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_On_Trade_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_CRM_DE_On_Trade_Visit</value>
        </filters>
        <label>EUR DE All On-Trade Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_MA_Off_Trade_Visit,EUR_CRM_Visit__c.EUR_MA_On_Trade_Visit</value>
        </filters>
        <label>EUR MA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_Visit_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_EndDateTime__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_StartDateTime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_PT_On_Trade_Visit</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_PT_Off_Trade_Visit</value>
        </filters>
        <label>EUR PT All Visit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Visits</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Sub_Category__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_RU_Off_Trade_Visit</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_RU_On_Trade_Visit</value>
        </filters>
        <label>EUR RU Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VST-{0000000000}</displayFormat>
        <label>Visit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit (EU)</pluralLabel>
    <recordTypes>
        <fullName>AO_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>AO Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>AO_On_Trade_Visit</fullName>
        <active>true</active>
        <label>AO On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Visit</fullName>
        <active>true</active>
        <label>AT Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BE On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wholesaler_Visit</fullName>
        <active>true</active>
        <label>EUR BE Wholesaler Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BG Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BG On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Visit</fullName>
        <active>true</active>
        <label>EUR BG Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Visit</fullName>
        <active>true</active>
        <label>EUR CH Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_On_Trade_Visit</fullName>
        <active>true</active>
        <label>DE On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>DE Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Visit</fullName>
        <active>true</active>
        <description>Record Type for DK OFF Trade Account&apos;s Visits</description>
        <label>EUR DK OFF Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Visit</fullName>
        <active>true</active>
        <description>Record Type for DK On Trade Account&apos;s Visits</description>
        <label>EUR DK ON Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Visit</fullName>
        <active>true</active>
        <label>EE Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_OFF_Trade_Visit</fullName>
        <active>true</active>
        <label>FI OFF Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_On_Trade_Visit</fullName>
        <active>true</active>
        <label>FI On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_Indies_Visit</fullName>
        <active>true</active>
        <label>GB Indies Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_On_Trade_FS_Visit</fullName>
        <active>true</active>
        <label>GB On Trade FS Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_JB_Visit</fullName>
        <active>true</active>
        <label>JB Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Visit</fullName>
        <active>true</active>
        <label>LT Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Visit</fullName>
        <active>true</active>
        <label>LV Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR MA Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR MA On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>NG Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_On_Trade_Visit</fullName>
        <active>true</active>
        <label>NG On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR PT On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR RU On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>KE_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>KE Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>KE_On_Trade_Visit</fullName>
        <active>true</active>
        <label>KE On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZA_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>ZA Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>ZA_On_Trade_Visit</fullName>
        <active>true</active>
        <label>ZA On Trade Visit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>